# sistema-academico-backend

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  tablas.sql
app/: config.py  database.py
app/models/: __init__.py  calificacion.py  carrera.py  curso.py  estudiante.py  facultad.py  matricula.py  pago.py  prerrequisito.py  profesor.py  seccion.py
app/routes/: __init__.py  calificacion.py  carrera.py  curso.py  estudiante.py  facultad.py  matricula.py  pago.py  profesor.py  seccion.py
