[project]
name = "sistema-academico-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.2",
    "psycopg2-binary==2.9.10",
    "pydantic-settings>=2.12.0",
    "python-dotenv==1.0.1",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "ruff>=0.14.5",
]
